# Python-RESTfulAPI

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ruff.yml
