[project]
name = "python-restfulapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.1",
    "uvicorn[standard]>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
lint.select = ["ALL"]
line-length = 100
lint.ignore = ["W","D100","FAST002","FBT001","D203","D211","D212","D213"]